style: fixed email wrapping

--- a/invoice-management-tool/src/components/navbar/Navbar.css
+++ b/invoice-management-tool/src/components/navbar/Navbar.css
@@ -28,6 +28,7 @@
   display: flex;
   align-items: center;
 }
+
 .logo-icon {
   width: 100px;
   background-color: white;
@@ -44,7 +45,7 @@
              -5px -5px 10px #66b74c;
   color: #f6f6f6;
   margin-right: 10px;
-  width: 150px;
+  width: max-content;
 }
 
 .profile-wrapper:hover{
